environments/rubrik/applications/example/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: guestbook
  annotations:
    metallb.universe.tf/address-pool: k8s-hosts-address-pool
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook-ui
